tests/baselines/reference/parserMemberAccessorDeclaration15.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration15.ts (1 errors) ====
    class C {
       set Foo(public a: number) { }
               ~~~~~~
!!! parserMemberAccessorDeclaration15.ts(2,12): error TS2246: A parameter property is only allowed in a constructor implementation.
    }